# SyntenyQC

./: LICENSE
SyntenyQC/: pyproject.toml
SyntenyQC/src/SyntenyQC/: SyntenyQC.py  collect.py  sieve.py
tests/: email.txt
