[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spam-eggs"
version = "0.0.1
requires-python = ">= 3.10"
dependencies = [
  "plotly==5.16.*",
  "biopython==1.80",
  "networkx==3.1",
  "pandas==1.5.*"
]
authors = [
  {name = "Timothy Kirkwood", email = "tdjkirkwood@hotmail.com"}
]
maintainers = [
  {name = "Timothy Kirkwood", email = "tdjkirkwood@hotmail.com"}
]
description = "A command line app for the processing and quality control of synteny plot naighbourhoods"  
readme = "README.md"
license = {text = "MIT License"}
keywords = ["egg", "bacon", "sausage", "tomatoes", "Lobster Thermidor"]
classifiers = ["Development Status :: 4 - Beta",
  "Programming Language :: Python"]

[project.scripts]
SyntenyQC-cli = "SyntenyQC:main_cli"
